--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,17 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=ABeeZee|Crete+Round')
+
 @import utils/_reset
 
 /* Variables */
 
-$primary-color: #222
-$secondary-color: #444
+$primary-color: #111
+$secondary-color: #333
 $accent-color: #c12410
 
 $section-margin: 2rem
 $section-padding: 1rem
 $container-width: 1000px
 
-$header-base-font-size: 2rem
+$header-base-font-size: 1.75rem
 $text-color: #eee
+$header-font: 'Crete Round', serif;
+$content-font: 'ABeeZee', sans-serif
 
 /* Mixin's + Placeholders */
 
@@ -34,6 +38,16 @@ $text-color: #eee
   content: ''
   clear: both
 
+%pokemon-type
+    padding: 0.4rem
+    width: 4rem
+    border-radius: 0.2rem
+    font-family: sans-serif
+    font-size: 0.7rem
+    text-transform: uppercase
+    text-shadow: 1px 1px 3px #000
+    box-shadow: 1px 1px 3px #000
+
 /* Globals */
 
 h1
@@ -48,9 +62,21 @@ h3
 h4
   font-size: $header-base-font-size - 1.25rem
 
-nav
-  li
-  font-size: 1.2rem
+h1,
+h2,
+h3,
+h4,
+a,
+label,
+input
+  font-family: $header-font
+  text-decoration: none
+
+p
+  font-family: $content-font
+
+p, h1, h2, h3, h4, a, label
+  color: $text-color
 
 body
     background-color: $primary-color
@@ -62,32 +88,50 @@ section
   padding: $section-padding
   max-width: $container-width
 
-p, h1, h2, h3, h4, a, label
-  color: $text-color
 
 
 /* Navigation */
 
 #nav-header
   @extend %background-format, %center-object
-  background-image: url('/assets/concert-photo.jpg')
+  background-image: url('https://www.zone-actu.com/wp-content/uploads/f505f5040274b97cd5114f9ff3ab8b99.jpg')
   margin-bottom: 0
   max-width: $container-width
 
   nav
-    @include linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.5))
+    @include linear-gradient(rgba(0,0,0,1) 70%, rgba(0,0,0,0))
     padding: $section-padding
 
   nav::after
     @extend %clear-fix
 
   h1
+    @extend %background-format
+    display: table
     float: left
+    
+    a  
+      display: table-cell
+      vertical-align: middle
+      text-decoration: none
 
-  li
-    display: inline-block
+  h1::before
+    @extend %background-format
+    background-size: contain
+    background-image: url('/assets/pokemon-search-logo.png')
+    content: ""
+    float: left
+    height: 3rem
+    width: 4rem
+
+  ul
+    display: block
     float: right
-    margin-right: 1rem
+    
+  li
+    float: left
+    margin: 0.5rem
+    font-size: 1.2rem
 
   &::after
     @extend %clear-fix  
@@ -104,7 +148,7 @@ p, h1, h2, h3, h4, a, label
   form
     display: table-cell
     vertical-align: middle
-    max-width: 350px
+    max-width: 400px
 
   form::after
     @extend %clear-fix
@@ -113,6 +157,9 @@ p, h1, h2, h3, h4, a, label
     display: inline-block
     background-color: $primary-color
     padding: 0.5rem
+
+    span
+      font-size: 0.75rem
 
   input
     display: block
@@ -139,19 +186,24 @@ p, h1, h2, h3, h4, a, label
 
 /* Search Results Section */
 
-section 
+#search-results
   
   h2
+    order: 1
     margin-bottom: 1rem
 
-.search-results
-  display: flex
-  flex-flow: row
-  justify-content: space-between
-  flex-wrap: wrap
+  ul
+    display: flex
+    flex-flow: row
+    justify-content: space-between
+    flex-wrap: wrap
+    align-items: center
 
   li
+    order: 2
+    text-align: center
     margin-bottom: 2rem
+    padding: 1rem
     background: $primary-color
     width: calc(100%/4 - 2rem)
 
@@ -161,13 +213,93 @@ section
   h3
     padding: 0.5rem
 
-  h4
-    padding: 0.5rem
-
-    
-
-
+  p
+    @extend %pokemon-type
+    display: inline-block
+    margin: 0 0.5rem
 
 
+.type-normal
+  background: #949562
+  border: 1px solid #66663e
 
+.type-fire
+  background: #de5d1a
+  border: 1px solid #a33f0d
+
+.type-water
+  background: #355be8
+  border: 1px solid #1238dc
+
+.type-electric
+  background: #f0bc19
+  border: 1px solid #b38b0c
+.type-grass
+  background: #56aa31
+  border: 1px solid #3b7921
+
+.type-ice
+  background: #6ec4c3
+  border: 1px solid #3aa8a7
+
+.type-fighting
+  background: #a61c1d
+  border: 1px solid #6d1515
+
+.type-poison
+  background: #722173
+  border: 1px solid #521a53
+
+.type-ground
+  background: #d2aa42
+  border: 1px solid #99741b
+
+.type-flying
+  background: #9074de
+  border: 1px solid #634ba7
+
+.type-psychic
+  background: #f20052
+  border: 1px solid #c90035
+
+.type-bug
+  background: #889a18
+  border: 1px solid #4e5910
+
+.type-rock
+  background: #968127
+  border: 1px solid #61541b
+
+.type-ghost
+  background: #553d7c
+  border: 1px solid #312447
+
+.type-dragon
+  background: #4a00f1
+  border: 1px solid #66663e
+
+.type-dark
+  background: #433229
+  border: 1px solid #281f1a
+
+.type-steel
+  background: #9695b7
+  border: 1px solid #666596
+
+.type-fairy
+  background: #da66dc
+  border: 1px solid #c925cb
+
+/* Footer */
+
+footer
+  @extend %center-object
+  display: table
+  text-align: center
+  height: 5rem
+  max-width: $container-width
+  
+  p
+    display: table-cell
+    vertical-align: middle
 
