Small updates to JS and SASS organization

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,310 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=ABeeZee|Crete+Round')
 
-@import utils/_reset
+@import partials/_reset
 
-/* Variables */
+@import modules/_all
+@import modules/_utility
 
-$primary-color: #111
-$secondary-color: #333
-$accent-color: #c12410
-
-$section-margin: 2rem
-$section-padding: 1rem
-$container-width: 1000px
-
-$header-base-font-size: 1.75rem
-$text-color: #eee
-$header-font: 'Crete Round', serif;
-$content-font: 'ABeeZee', sans-serif
-
-/* Mixin's + Placeholders */
-
-@mixin linear-gradient($color-starts, $color-stops)
-  background: nth(nth($color-stops,1), 1)
-  background: -webkit-linear-gradient($color-starts, $color-stops)
-  background: linear-gradient($color-starts, $color-stops)
-
-%background-format
-  background-position: center
-  background-size: cover
-  background-repeat: no-repeat
-
-%center-object
-    margin-left: auto
-    margin-right: auto
-
-%clear-fix
-  display: block
-  content: ''
-  clear: both
-
-%pokemon-type
-    padding: 0.4rem
-    width: 4rem
-    border-radius: 0.2rem
-    font-family: sans-serif
-    font-size: 0.7rem
-    text-transform: uppercase
-    text-shadow: 1px 1px 3px #000
-    box-shadow: 1px 1px 3px #000
-
-/* Globals */
-
-h1
-  font-size: $header-base-font-size
-
-h2
-  font-size: $header-base-font-size - .5rem
-
-h3
-  font-size: $header-base-font-size - .75rem
-
-h4
-  font-size: $header-base-font-size - 1.25rem
-
-h1,
-h2,
-h3,
-h4,
-a,
-label,
-input
-  font-family: $header-font
-  text-decoration: none
-
-p
-  font-family: $content-font
-
-p, h1, h2, h3, h4, a, label
-  color: $text-color
-
-body
-  @extend %background-format 
-  background: url('/assets/dark-background.jpg')
-  background-size: 300%
-
-section
-  @extend %center-object
-  background-color: $secondary-color
-  margin-bottom: $section-margin
-  padding: $section-padding
-  max-width: $container-width
-
-
-
-/* Navigation */
-
-#nav-header
-  @extend %background-format, %center-object
-  background-image: url('https://www.zone-actu.com/wp-content/uploads/f505f5040274b97cd5114f9ff3ab8b99.jpg')
-  margin-bottom: 0
-  max-width: $container-width
-
-  nav
-    @include linear-gradient(rgba(0,0,0,1) 70%, rgba(0,0,0,0))
-    padding: $section-padding
-
-  nav::after
-    @extend %clear-fix
-
-  h1
-    @extend %background-format
-    display: table
-    float: left
-    margin: 0.75rem
-    
-    a  
-      display: table-cell
-      vertical-align: middle
-      text-decoration: none
-
-  h1::before
-    @extend %background-format
-    background-size: contain
-    background-image: url('/assets/pokemon-search-logo.png')
-    content: ""
-    float: left
-    height: 3rem
-    width: 4rem
-
-  ul
-    display: block
-    float: right
-    
-  li
-    float: left
-    margin: 0.75rem
-    font-size: 1.2rem
-
-  &::after
-    @extend %clear-fix  
-
-/* Search Section */
-
-#search-section
-  @extend %center-object
-  display: table
-  background: none
-  padding: $section-padding
-  height: 12.5rem
-
-  form
-    display: table-cell
-    vertical-align: middle
-    max-width: 400px
-
-  form::after
-    @extend %clear-fix
-
-  label
-    display: inline-block
-    background-color: $primary-color
-    padding: 0.5rem
-
-    span
-      font-size: 0.75rem
-
-  input
-    display: block
-    float: left
-    padding: 0.5rem
-    width: 85%
-    height: 3rem
-    font-size: 1.5rem
-    border: none
-    z-index: 10
-
-  button
-    float: right
-    background: url('/assets/search.png'), white
-    padding: 0
-    width: 15%
-    height: 3rem
-    background-size: 60%
-    background-repeat: no-repeat
-    background-position: center
-    border: none
-    cursor: pointer
-
-  &::after
-    @extend %clear-fix
-
-/* Search Results Section */
-
-#search-results
-  
-  h2
-    order: 1
-    margin-bottom: 1rem
-
-  ul
-    display: flex
-    flex-flow: row
-    justify-content: space-between
-    flex-wrap: wrap
-    align-items: center
-
-  li
-    order: 2
-    text-align: center
-    margin-bottom: 2rem
-    padding: 1rem
-    background: $primary-color
-    width: calc(100%/4 - 2rem)
-
-  img
-    max-width: 100%
-
-  h3
-    padding: 0.5rem
-
-  p
-    @extend %pokemon-type
-    display: inline-block
-    margin: 0 0.5rem
-
-
-.type-normal
-  background: #949562
-  border: 1px solid #66663e
-
-.type-fire
-  background: #de5d1a
-  border: 1px solid #a33f0d
-
-.type-water
-  background: #355be8
-  border: 1px solid #1238dc
-
-.type-electric
-  background: #f0bc19
-  border: 1px solid #b38b0c
-.type-grass
-  background: #56aa31
-  border: 1px solid #3b7921
-
-.type-ice
-  background: #6ec4c3
-  border: 1px solid #3aa8a7
-
-.type-fighting
-  background: #a61c1d
-  border: 1px solid #6d1515
-
-.type-poison
-  background: #722173
-  border: 1px solid #521a53
-
-.type-ground
-  background: #d2aa42
-  border: 1px solid #99741b
-
-.type-flying
-  background: #9074de
-  border: 1px solid #634ba7
-
-.type-psychic
-  background: #f20052
-  border: 1px solid #c90035
-
-.type-bug
-  background: #889a18
-  border: 1px solid #4e5910
-
-.type-rock
-  background: #968127
-  border: 1px solid #61541b
-
-.type-ghost
-  background: #553d7c
-  border: 1px solid #312447
-
-.type-dragon
-  background: #4a00f1
-  border: 1px solid #66663e
-
-.type-dark
-  background: #433229
-  border: 1px solid #281f1a
-
-.type-steel
-  background: #9695b7
-  border: 1px solid #666596
-
-.type-fairy
-  background: #da66dc
-  border: 1px solid #c925cb
-
-/* Footer */
-
-footer
-  @extend %center-object
-  display: table
-  text-align: center
-  height: 5rem
-  max-width: $container-width
-  
-  p
-    display: table-cell
-    vertical-align: middle
-
+@import partials/_header
+@import partials/_search-results
+@import partials/_footer
