--- a/sass/partials/_header.sass
+++ b/sass/partials/_header.sass
@@ -90,5 +90,9 @@
     border: none
     cursor: pointer
 
+  .search-error
+    background-color: $error-color;
+    font-size: $header-base-font-size - 1rem
+
   &::after
     @extend %clear-fix
