--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,8 @@ p, h1, h2, h3, h4, a, label {
 
 body {
   background: url("/assets/dark-background.jpg");
+  background-attachment: fixed;
+  background-position: left top;
   background-size: 300%; }
 
 section {
@@ -72,7 +74,7 @@ section {
   padding: 1rem;
   max-width: 1000px; }
 
-body, #nav-header, #nav-header h1, #nav-header h1::before {
+#nav-header, #nav-header h1, #nav-header h1::before {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat; }
@@ -85,16 +87,6 @@ section, #nav-header, #search-section, footer {
   display: block;
   content: '';
   clear: both; }
-
-#search-results p {
-  padding: 0.4rem;
-  width: 4rem;
-  border-radius: 0.2rem;
-  font-family: sans-serif;
-  font-size: 0.7rem;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 3px #000;
-  box-shadow: 1px 1px 3px #000; }
 
 #nav-header {
   background-image: url("https://www.zone-actu.com/wp-content/uploads/f505f5040274b97cd5114f9ff3ab8b99.jpg");
@@ -164,6 +156,9 @@ section, #nav-header, #search-section, footer {
     background-position: center;
     border: none;
     cursor: pointer; }
+  #search-section .search-error {
+    background-color: #ba1604;
+    font-size: 0.75rem; }
 
 #search-results h2 {
   margin-bottom: 1rem; }
@@ -188,9 +183,27 @@ section, #nav-header, #search-section, footer {
 #search-results h3 {
   padding: 0.5rem; }
 
-#search-results p {
+footer {
+  display: table;
+  text-align: center;
+  height: 5rem;
+  max-width: 1000px; }
+  footer p {
+    display: table-cell;
+    vertical-align: middle; }
+
+.type {
   display: inline-block;
-  margin: 0 0.5rem; }
+  margin: 0 0.5rem;
+  padding: 0.4rem;
+  min-width: 4rem;
+  border-radius: 0.2rem;
+  font-family: sans-serif;
+  font-size: 0.7rem;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 3px #000;
+  box-shadow: 1px 1px 3px #000; }
 
 .type-normal {
   background: #949562;
@@ -263,12 +276,3 @@ section, #nav-header, #search-section, footer {
 .type-fairy {
   background: #da66dc;
   border: 1px solid #c925cb; }
-
-footer {
-  display: table;
-  text-align: center;
-  height: 5rem;
-  max-width: 1000px; }
-  footer p {
-    display: table-cell;
-    vertical-align: middle; }
