--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ p, h1, h2, h3, h4, a, label {
   color: #eee; }
 
 body {
-  background: url("/assets/dark-background.jpg");
+  background: url("/img/dark-background.jpg");
   background-attachment: fixed;
   background-position: left top;
   background-size: 300%; }
@@ -74,12 +74,17 @@ section {
   padding: 1rem;
   max-width: 1000px; }
 
+.loading {
+  display: block;
+  width: 5rem;
+  height: 5rem; }
+
 #nav-header, #nav-header h1, #nav-header h1::before {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat; }
 
-section, #nav-header, #search-section, footer {
+section, .loading, #nav-header, #search-section, footer {
   margin-left: auto;
   margin-right: auto; }
 
@@ -107,7 +112,7 @@ section, #nav-header, #search-section, footer {
       text-decoration: none; }
   #nav-header h1::before {
     background-size: contain;
-    background-image: url("/assets/pokemon-search-logo.png");
+    background-image: url("/img/pokemon-search-logo.png");
     content: "";
     float: left;
     height: 3rem;
@@ -147,7 +152,7 @@ section, #nav-header, #search-section, footer {
     z-index: 10; }
   #search-section button {
     float: right;
-    background: url("/assets/search.png"), white;
+    background: url("/img/search.png"), white;
     padding: 0;
     width: 15%;
     height: 3rem;
