--- a/sass/partials/_header.sass
+++ b/sass/partials/_header.sass
@@ -25,7 +25,7 @@
   h1::before
     @extend %background-format
     background-size: contain
-    background-image: url('/assets/pokemon-search-logo.png')
+    background-image: url('/img/pokemon-search-logo.png')
     content: ""
     float: left
     height: 3rem
@@ -80,7 +80,7 @@
 
   button
     float: right
-    background: url('/assets/search.png'), white
+    background: url('/img/search.png'), white
     padding: 0
     width: 15%
     height: 3rem
