--- a/sass/modules/_all.sass
+++ b/sass/modules/_all.sass
@@ -7,46 +7,21 @@ $section-margin: 2rem
 $section-padding: 1rem
 $container-width: 1000px
 
-$header-base-font-size: 1.75rem
-$text-color: #eee
-$header-font: 'Crete Round', serif;
-$content-font: 'ABeeZee', sans-serif
-
 $image-loading: url('/img/load.gif')
 
-h1
-  font-size: $header-base-font-size
+$search-bar-height: 2.5rem
 
-h2
-  font-size: $header-base-font-size - .5rem
-
-h3
-  font-size: $header-base-font-size - .75rem
-
-h4
-  font-size: $header-base-font-size - 1.25rem
-
-h1,
-h2,
-h3,
-h4,
-a,
-label,
-input
-  font-family: $header-font
-  text-decoration: none
-
-p
-  font-family: $content-font
-
-p, h1, h2, h3, h4, a, label
-  color: $text-color
+$response-tablet: 400px
+$response-desktop: 768px
 
 body
   background: url('/img/dark-background.jpg')
   background-attachment: fixed
   background-position: left top
   background-size: 300%
+  padding: 1rem
+  @media (min-width: $response-tablet)
+    padding: 0 1rem
 
 section
   @extend %center-object
