--- a/sass/modules/_utility.sass
+++ b/sass/modules/_utility.sass
@@ -3,6 +3,12 @@
   background: -webkit-linear-gradient($color-starts, $color-stops)
   background: linear-gradient($color-starts, $color-stops)
 
+%flex-box
+  display: flex
+  flex-wrap: wrap
+  flex-direction: row
+  justify-content: space-between
+
 %background-format
   background-position: center
   background-size: cover
