--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,9 +3,11 @@
 @import partials/_reset
 
 @import modules/_all
+@import modules/_fonts
 @import modules/_utility
 
 @import partials/_header
+@import partials/_search-bar
 @import partials/_search-results
 @import partials/_footer
 @import partials/_pokemon-types
