--- a/sass/partials/_pokemon-types.sass
+++ b/sass/partials/_pokemon-types.sass
@@ -1,11 +1,10 @@
 .type
   display: inline-block
   margin: 0 0.5rem
-  padding: 0.4rem
-  min-width: 4rem
+  margin-bottom: 0.25rem
+  padding: 0.4rem 0.75rem
   border-radius: 0.2rem
-  font-family: sans-serif
-  font-size: 0.7rem
+  vertical-align: middle
   text-align: center
   text-transform: uppercase
   text-shadow: 1px 1px 3px #000
