--- a/sass/partials/_search-results.sass
+++ b/sass/partials/_search-results.sass
@@ -3,7 +3,6 @@
   h2
     margin-bottom: 1rem
   
-
   ul
     display: flex
     flex-flow: row
@@ -16,10 +15,17 @@
     text-align: center
     margin-bottom: 2rem
     padding: 1rem
-    width: calc(100%/3 - 2rem)
+    width: 100%
+    @media (min-width: $response-tablet)
+      width: calc(100%/2 - 1rem)
+    @media (min-width: $response-desktop)
+      width: calc(100%/3 - 2rem)
 
   img
     max-width: 100%
 
   h3
     padding: 0.5rem
+
+
+
